# specfp

./: .flake8  README.md  noxfile.py  pyproject.toml
src/specfp/: __init__.py  cli.py  converters.py  dashboard.py  raman_tools.py
src/specfp/decoders/: __init__.py  wdf.py
tests/: conftest.py  test_decoders.py  test_specfp.py
tests/WDF/: single.wdf
