[tool.poetry]
name = "specfp"
version = "0.0.0"
description = "Spectroscpy band fingerprinting."
authors = ["William T. Le <william.le@posteo.ca>"]
maintainers = ["William T. Le <william.le@posteo.ca>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
