[tool.poetry]
name = "specfp"
version = "0.1.0"
description = "Spectroscopy band fingerprinting."
authors = ["William T. Le <william.le@posteo.ca>"]
maintainers = ["William T. Le <william.le@posteo.ca>"]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
numpy = "^1.23.2"
pandas = "^1.4.3"
click = "^8.1.3"
attrs = "^22.1.0"
fsspec = "^2022.7.1"
construct = "^2.10.68"
loguru = "^0.6.0"
transitions = "^0.8.11"
aenum = "^3.1.11"
tqdm = "^4.64.0"
plotly = "^5.10.0"
dash = "^2.6.1"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-cov = "^3.0.0"
nox = "^2022.8.7"
mypy = "^0.971"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"

[tool.poetry.scripts]
specfp = "specfp.cli:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["specfp"]

[tool.coverage.report]
fail_under = 100

[tool.mypy]
install_types = true
non_interactive = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --quiet --doctest-modules --cov-report=term-missing -W=ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
